--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title:       yth2012's blog
 email:       ''
 description: 'yth2012's personal blog'
 baseurl:     '' # The subpath of your site, e.g. /blog
-url:         'https://type-jekyll.aspirethemes.com/' # The base hostname & protocol for your site
+url:         'https://yth2012.github.io/' # The base hostname & protocol for your site
 twitter:     ''
 github:      ''
 instagram:   ''
