--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       'yth2012\'s blog'
+title:       "yth2012's blog"
 email:       ''
 description: 'yth2012's personal blog'
 baseurl:     '' # The subpath of your site, e.g. /blog
