--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       'yth2012'
+title:       "yth2012's Blog"
 email:       ''
-description: 'yth2012's personal blog'
+description: "yth2012's personal Blog"
 baseurl:     '' # The subpath of your site, e.g. /blog
-url:         'https://yth2012.github.io/' # The base hostname & protocol for your site
+url:         "https://yth2012.github.io/" # The base hostname & protocol for your site
 twitter:     ''
 github:      ''
 instagram:   ''
